# gmirv2401

./: .gitignore  CMakeLists.txt  README.md
components/gmirv2401/: CMakeLists.txt
components/gmirv2401/include/: gmirv2401.h  gmirv2401_ctrl.h  gmirv2401_reg.h
components/gmirv2401/src/: gmirv2401.c  gmirv2401_ctrl.c
main/: CMakeLists.txt  main.c
